Change Services text from span to div

--- a/index.html
+++ b/index.html
@@ -35,15 +35,15 @@
     <div class="services">
       <div class="service">
         <img src="resources/images/paper-icon.png"/>
-        <span>Comprenesive Exams</span>
+        <div>Comprenesive Exams</div>
       </div>
       <div class="service">
         <img src="resources/images/ruler-icon.png" />
-        <span>Custom Fittings</span>
+        <div>Custom Fittings</div>
       </div>
       <div class="service">
         <img src="resources/images/truck-icon.png"/>
-        <span>Fast Delivery</span>
+        <div>Fast Delivery</div>
       </div>
     </div>
   </body>
